--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "dotenv": "^16.3.1",
+    "multer": "^1.4.5-lts.1",
     "cors": "^2.8.5",
     "body-parser": "^1.20.2",
     "validator": "^13.11.0"
